--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "core-js": "^3.6.4",
+    "cors": "^2.8.5",
+    "element-ui": "^2.4.5",
+    "jsonwebtoken": "^8.5.1",
+    "jwt": "^0.2.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
@@ -17,6 +26,10 @@
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
+    "babel-plugin-component": "^1.1.1",
+    "node-sass": "^4.14.0",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-element": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
